# Web404

./: Proyecto  README.md
SCTransaction/: Cargo.toml  db.php  home.html  index.html  logeoexitoso.html  login.html  registro.html  registro.php  transaccion.html  validar.php
SCTransaction/css/: redessociales.css
SCTransaction/src/: lib.rs
SCTransaction/wasm32-unknown-unknown/debug/: sctransaction.meta.wasm  sctransaction.opt.wasm  sctransaction.wasm
SCTransaction/wasm32-unknown-unknown/release/: sctransaction.meta.wasm  sctransaction.opt.wasm  sctransaction.wasm
